--- a/theme/foyers/templates/mails/testProgressif.html
+++ b/theme/foyers/templates/mails/testProgressif.html
@@ -1,93 +1,37 @@
-<div ng-controller="ContactBlockController as contactCtrl" class="container" ng-init="
-      contactCtrl.contactData.subject='Nouvelle réservation';
-      contactCtrl.contactData.nbOfNights = 0;
-      lg = rubedo.current.page.locale;
-      moment.locale(rubedo.current.page.locale);
-      contactCtrl.contactData.template='/theme/foyers/templates/mails/reservationEDM.html';
-      contactCtrl.param.joursCumul=[0,0,31,59,90,120,151,181,212,243,273,304,334,365];">
+<div ng-controller="ContactBlockController as contactCtrl" class="container">
 
         <form name="edmForm" role="form" ng-submit="contactCtrl.submit()">
         <div class="row">
             <h3>Informations personnelles</h3>
         </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <label for="{{'name'+block.id}}" >{{rubedo.translate("Blocks.Contact.Input.Name.Label","Name*")}}</label>
-                <input type="text" ng-model="contactCtrl.contactData.nom" class="form-control" id="{{'name'+block.id}}" required>
-            </div>
-            <!--<div class="col-sm-6">
-                <label >Prénom*</label>
-                <input type="text"  ng-model="contactCtrl.contactData.prenom" class="form-control"  required>
-            </div>-->
-        </div><br/>
-        <div class="row">
-            <div class="col-sm-4"><label for="prenom" class="label_style">{{rubedo.translate("Block.Inscription.Prenom")}}*</label></div>
-            <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="contactCtrl.contactData.prenom" name="prenom" required></div>
-        </div>
-        <!--<div class="row" >
-        <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
-        <div class="col-sm-8">
-            <input type="radio"  name="sexe" id="H" value="H" ng-model="contactCtrl.contactData.sexe.sexe" required>
-                        <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
-            <input type="radio"  name="sexe" id="F" value="F" ng-model="contactCtrl.contactData.sexe.sexe">
-                        <label for="F" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.F")}}</label>
-        </div>
-    </div>-->
-    <div class="row" >
-        <div class="col-sm-4"><label for="dateNaiss" class="label_style">{{rubedo.translate("Block.Inscription.DateNaiss")}}*</label></div>
-        <div class="col-sm-8">
-            <div class="dropdown">
-                <a showtab class="dropdown-toggle" id="dropdowndateNaiss" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateNaiss" ng-model="contactCtrl.contactData.birthdate" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="contactCtrl.contactData.birthdate"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateNaiss', startView: 'year', minView:'day'}" data-on-set-time="contactCtrl.contactData.birthdate = (contactCtrl.contactData.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
-            </div>
-        </div>
-    </div>
-    <div class="row" >
-        <div class="col-sm-4"><label for="villeNaiss" class="label_style">{{rubedo.translate("Block.Inscription.VilleNaiss")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="villeNaiss" ng-model="contactCtrl.contactData.birthplace" name="birthplace" placeholder="Indiquer aussi le département entre parenthèses" required></div>
-    </div>
-    
-    <div class="row" >
-        <div class="col-sm-4"><label for="nationalite" class="label_style">{{rubedo.translate("Block.Inscription.Nationalite")}}</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="contactCtrl.contactData.nationality" name="nationality"></div>
-    </div>
-    <div class="row" >
-        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="contactCtrl.contactData.tel"  required>
-        </div>
-    </div> 
-        <div class="row">
-            <div class="col-sm-6">
-                <label >Email*</label>
-                <input type="text" ng-model="contactCtrl.contactData.email" class="form-control" required>
-            </div>
-            
-        </div><br/>
-
-        <div class="row">
-            <div class="col-sm-12">
-                <label class="text-center">Préciser, en quelques mots, l'objet de votre demande *</label><br/>
-                <label class="text-center" style="font-style:italic;">Merci de préciser le type de chambre que vous désirez (individuelle, double ou familiale)</label>
-                <textarea class="form-control" ng-model="contactCtrl.contactData.message" rows="2" required></textarea>
-            </div>
-                
-
-        </div><br/>
         
-       <!-- <div class="row">
-            <div class="sm-12">
-                <div ng-if="contactCtrl.contactError" ng-init="notification = {type:'error',text:contactCtrl.contactError}">
-                        <rubedo-notification></rubedo-notification>
-                    </div>
-                    <button type="submit" class="button rouge">{{rubedo.translate("Blocks.Contact.Input.Submit.Label","Submit")}}</button>
 
-            </div>
-        </div>-->
+        <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==1}" ng-click="contactCtrl.setCurrentStage(0,infos_personnelles.$valid)">{{rubedo.translate("Block.Inscription.InfosPerso", "Informations personnelles")}}
+                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>1"></span>
+        </h2>
+        <div id="inscriptionStage1" class="collapse in"> 
+            <ng-form name="infos_personnelles">
+                    <div  class="row" ng-include="contactCtrl.general_infos"></div>
+                    <div class="row text-center">
+                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="contactCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                        <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
+                    </div>
+            </ng-form>
+        </div>
+        
+        <h2 class="capital txt-red" ng-class="{'displayed' : contactCtrl.currentStage==2}" ng-click="contactCtrl.setCurrentStage(1,infos_familiales.$valid)">{{rubedo.translate("Block.Inscription.InfosFamiliales", "Informations familiales")}}
+                                <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="contactCtrl.currentStage>2"></span>
+                        </h2>
+                        <div id="inscriptionStage2" class="collapse">
+                            <ng-form name="infos_familiales">
+                                    <div  class="row" ng-include="contactCtrl.family_infos"></div>
+                                    <!--<div  class="row" ng-include="contactCtrl.freres_soeurs_infos"></div>-->
+                                    <div class="row text-center">
+                                        <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_familiales.$invalid}" ng-click="contactCtrl.setCurrentStage(2,infos_familiales.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
+                                        <p ng-if="infos_familiales.$invalid && infos_familiales.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
+                                    </div>
+                            </ng-form>
+        </div>
         
         
         <div class="row">
