--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -28,7 +28,7 @@
                 <tr>
                     <th></th>
                     <th ng-click="ctrl.sortProducts('text')">Nom du produit</th>
-                    <th ng-click="ctrl.sortProducts('details/sku')">SKU</th>
+                    <th ng-click="ctrl.sortProducts('details/sku')">Prix</th>
                     <th ng-click="ctrl.sortProducts('details/stock')">Stock</th>
                 </tr>
             </thead>
@@ -43,10 +43,13 @@
                         <span class="badge badge-success" ng-if="item.online" ng-click="ctrl.changeStatus($event, item.id, 'offline')">en ligne</span>
                         <span class="badge" ng-if="!item.online" ng-click="ctrl.changeStatus($event, item.id, 'online')">hors ligne</span>
                     </td>
-                    <td>{{ item.productProperties.sku }}</td>
+                    <td class="prix">
+                        <span ng-if="item.details.price.min == item.details.price.max">{{ item.productProperties.variations[0].price }} €</span>
+                        <span ng-if="item.details.price.min != item.details.price.max">{{ item.details.price.min }} à {{ item.details.price.max }} €</span>
+                    </td>
                     <td class="stock clickable">
-                        <span ng-if="item.productProperties.variations.length == 1" data-toggle="tooltip" title="{{ item.productProperties.sku }}" ng-click="ctrl.copyToClipboard(item.productProperties.sku)">{{ item.productProperties.variations[0].stock }}</span>
-                        <span ng-if="item.productProperties.variations.length > 1">{{ item.details.stock.min }} à {{ item.details.stock.max }}</span>
+                        <span ng-if="item.details.stock.min == item.details.stock.max" data-toggle="tooltip" title="{{ item.productProperties.sku }}" ng-click="ctrl.copyToClipboard(item.productProperties.sku)">{{ item.productProperties.variations[0].stock }}</span>
+                        <span ng-if="item.details.stock.min != item.details.stock.max">{{ item.details.stock.min }} à {{ item.details.stock.max }}</span>
                     </td>
                     <!-- <td data-toggle="tooltip" title="{{ item.productProperties.sku }}" ng-click="ctrl.copyToClipboard(item.productProperties.sku)">{{ item.details.stock }}</td> -->
                 </tr>
